added preview image for meta tags

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
     <meta name="robots" content="index, follow" />
     <meta property="og:title" content="Play | Bet Your Memes!" />
     <meta property="og:description" content="Bet Your Memes is a decentralized casino on Solana where you can play various games using memecoins. Join now to play and win big!" />
-    <meta property="og:image" content="/icon-512.png" />
+    <meta property="og:image" content="/preview.png" />
     <meta property="og:url" content="https://betyourmemes.fun" />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Play | Bet Your Memes!" />
     <meta name="twitter:description" content="Bet Your Memes is a decentralized casino on Solana. Play and win big with memecoins!" />
-    <meta name="twitter:image" content="/icon-512.png" />
+    <meta name="twitter:image" content="/preview.png" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
